--- a/index.html
+++ b/index.html
@@ -201,23 +201,23 @@
                 </div>
             </div>
             <div class="row pt-5 pb-5">
-                <div class="col-md-3 col-sm-3"></div>
-                <div class="col-md-2 col-sm-2 text-center" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-md-3 col-sm-3 pt-5 pb-5"></div>
+                <div class="col-md-2 col-sm-2 text-center pt-5 pb-5" data-aos="fade-up" data-aos-delay="300">
                     <a href="https://www.linkedin.com/in/iyan-theekshana/" target="_blank" class="social-link">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                 </div>
-                <div class="col-md-2 col-sm-2 text-center" data-aos="fade-up" data-aos-delay="500">
+                <div class="col-md-2 col-sm-2 text-center pt-5 pb-5" data-aos="fade-up" data-aos-delay="500">
                     <a href="https://github.com/IyanTheekshana" target="_blank"  class="social-link">
                         <i class="fab fa-github"></i>
                     </a>
                 </div>
-                <div class="col-md-2 col-sm-2 text-center" data-aos="fade-up" data-aos-delay="700">
+                <div class="col-md-2 col-sm-2 text-center pt-5 pb-5" data-aos="fade-up" data-aos-delay="700">
                     <a href="mailto:iyan.dev123@gmail.com" target="_blank" class="social-link">
                         <i class="fas fa-at"></i>
                     </a>
                 </div>
-                <div class="col-md-3 col-sm-2"></div>
+                <div class="col-md-3 col-sm-2 pt-5 pb-5"></div>
             </div>
             
             </div>
