added project 5 and 6, modified scroll bar

--- a/index.html
+++ b/index.html
@@ -179,6 +179,18 @@
                     <a href="https://github.com/IyanTheekshana/AngularWeatherApp" class="shadow portfolio-btn" target="_blank">Github Repo</a>
                 </div>
               </div>
+              <div class="row  pt-5">
+                <div class="col-md-6 text-center" data-aos="fade-up" data-aos-delay="300">
+                    <img src="img/project5.png" class="img-project shadow" alt="">
+                    <a href="https://ang-blog-app-iyan.netlify.app/" class="shadow portfolio-btn" target="_blank">Live</a>
+                    <a href="https://github.com/IyanTheekshana/Angular-blog-app" class=" shadow portfolio-btn" target="_blank" >Github Repo</a>
+                </div>
+                <div class="col-md-6 text-center" data-aos="fade-up" data-aos-delay="600">
+                    <img src="img/project6.png" class="img-project shadow" alt="">
+                    <a href="https://jsprojects-iyan.netlify.app/todos/" class="shadow portfolio-btn" target="_blank" >Live</a>
+                    <a href="https://github.com/IyanTheekshana/jsprojects/tree/main/todos" class="shadow portfolio-btn" target="_blank">Github Repo</a>
+                </div>
+              </div>
               <div class="row">
                 <div class="col-md-6"></div>
                 <div class="col-md-6"></div>
