--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   <a class="nav-link" href="#aboutme">About Me</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#portfolio">Portoflio</a>
+                  <a class="nav-link" href="#portfolio">Portfolio</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#contactme">Contact Me</a>
