--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
+      name="description"
+      content="Sono un Junior Web Developer specializzato in HTML5, CSS3 e SASS, con esperienza in Angular, Bootstrap, Java, C# e PHP."
+    />
+    <meta
+      name="keywords"
+      content="Junior Web Developer, HTML5, CSS3, SASS, Angular, Bootstrap, Java, C#"
+    />
+
+    <meta
       name="theme-color"
       media="(prefers-color-scheme: light)"
       content="#2B3035"
