added hightlight color

--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@
           <div class="row pb-5">
             <div class="col-md-8"></div>
             <div class="col-md-4 sub__title-box" data-aos="fade-up">
-              <h4 class="float-end sub__title-box-title">Chi sono</h4>
+              <h4 class="float-end sub__title-box-title hightlight">
+                Chi sono
+              </h4>
             </div>
           </div>
           <div class="row pt-5">
@@ -247,7 +249,9 @@
           <div class="row pb-5 pt-4">
             <div class="col-md-8"></div>
             <div class="col-md-4 sub__title-box" data-aos="fade-up">
-              <h4 class="float-end sub__title-box-title">Portfolio</h4>
+              <h4 class="float-end sub__title-box-title hightlight">
+                Portfolio
+              </h4>
             </div>
           </div>
           <div class="row pt-5">
@@ -377,7 +381,9 @@
           <div class="row pb-5 pt-4">
             <div class="col-md-8"></div>
             <div class="col-md-4 sub__title-box" data-aos="fade-up">
-              <h4 class="float-end sub__title-box-title">Contattami</h4>
+              <h4 class="float-end sub__title-box-title hightlight">
+                Contattami
+              </h4>
             </div>
           </div>
           <div class="row pb-3 pt-5">
@@ -397,7 +403,7 @@
                 target="_blank"
                 class="social-link"
               >
-                <i class="fab fa-linkedin-in"></i>
+                <i class="fab fa-linkedin-in hightlight"></i>
               </a>
             </div>
             <div
@@ -410,7 +416,7 @@
                 target="_blank"
                 class="social-link"
               >
-                <i class="fab fa-github"></i>
+                <i class="fab fa-github hightlight"></i>
               </a>
             </div>
             <div
@@ -423,7 +429,7 @@
                 target="_blank"
                 class="social-link"
               >
-                <i class="fas fa-at"></i>
+                <i class="fas fa-at hightlight"></i>
               </a>
             </div>
             <div class="col-md-3 col-sm-2 pt-5 pb-5"></div>
