added hightlight color

--- a/index.html
+++ b/index.html
@@ -180,55 +180,55 @@
                       <ul class="splide__list">
                         <li class="splide__slide">
                           <p class="slide-icon">
-                            <i class="devicon-html5-plain"></i>
+                            <i class="devicon-html5-plain hightlight"></i>
                           </p>
                           <p class="slide--text">HTML5</p>
                         </li>
                         <li class="splide__slide">
                           <p class="slide-icon">
-                            <i class="devicon-css3-plain"></i>
+                            <i class="devicon-css3-plain hightlight"></i>
                           </p>
                           <p class="slide--text">CSS3</p>
                         </li>
                         <li class="splide__slide">
                           <p class="slide-icon">
-                            <i class="devicon-javascript-plain"></i>
+                            <i class="devicon-javascript-plain hightlight"></i>
                           </p>
                           <p class="slide--text">JAVASCRIPT</p>
                         </li>
                         <li class="splide__slide">
                           <p class="slide-icon">
-                            <i class="devicon-angularjs-plain"></i>
+                            <i class="devicon-angularjs-plain hightlight"></i>
                           </p>
                           <p class="slide--text">Angular</p>
                         </li>
                         <li class="splide__slide">
                           <p class="slide-icon">
-                            <i class="devicon-java-plain"></i>
+                            <i class="devicon-java-plain hightlight"></i>
                           </p>
                           <p class="slide--text">JAVA</p>
                         </li>
                         <li class="splide__slide">
                           <p class="slide-icon">
-                            <i class="devicon-csharp-plain"></i>
+                            <i class="devicon-csharp-plain hightlight"></i>
                           </p>
                           <p class="slide--text">C#</p>
                         </li>
                         <li class="splide__slide">
                           <p class="slide-icon">
-                            <i class="devicon-wordpress-plain"></i>
+                            <i class="devicon-wordpress-plain hightlight"></i>
                           </p>
                           <p class="slide--text">WORDPRESS</p>
                         </li>
                         <li class="splide__slide">
                           <p class="slide-icon">
-                            <i class="devicon-php-plain"></i>
+                            <i class="devicon-php-plain hightlight"></i>
                           </p>
                           <p class="slide--text">PHP</p>
                         </li>
                         <li class="splide__slide">
                           <p class="slide-icon">
-                            <i class="devicon-mysql-plain"></i>
+                            <i class="devicon-mysql-plain hightlight"></i>
                           </p>
                           <p class="slide--text">MYSQL</p>
                         </li>
