--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <b>Specializzazione IFTS di sviluppo software (Post-Diploma)</b>
                 con una valutazione ottima.
               </p>
-              <p data-aos="fade-up">
+              <!-- <p data-aos="fade-up">
                 Sono molto concentrato sullo sviluppo delle applicazioni e sulla
                 scrittura di codice,<b>
                   attualmente utilizzo HTML5, CSS3/SCSS, JavaScript e C# per
@@ -160,7 +160,24 @@
                 >
                 Sono alla ricerca di nuove sfide che mi consenta di crescere
                 personalmente e professionalmente.
+              </p> -->
+              <p data-aos="fade-up">
+                Sono un junior developer con competenze in
+                <b>HTML5, CSS2 e JavaScript</b>, oltre ad avere esperienza con i
+                framework front-end come <b>Angular</b>. Al momento, sto
+                imparando <b>Vue</b> per ampliare le mie conoscenze.
+                <b
+                  >Il mio obiettivo è diventare uno sviluppatore full stack web
+                  specializzato nell'ambito .NET</b
+                >. Sono sempre motivato a imparare nuove tecnologie e migliorare
+                le mie capacità per fornire prodotti di alta qualità ai miei
+                clienti.
               </p>
+            </div>
+          </div>
+          <div class="row mt-5 mb-2">
+            <div class="col-md-12 text-center">
+              <h3>Competenze digitali sono...</h3>
             </div>
           </div>
           <div class="row pt-5">
