--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           </div>
           <div class="row mt-5 mb-2">
             <div class="col-md-12 text-center">
-              <h3>Competenze digitali sono...</h3>
+              <h3>Le competenze digitali</h3>
             </div>
           </div>
           <div class="row pt-5">
