--- a/index.html
+++ b/index.html
@@ -144,34 +144,15 @@
           <div class="row pt-5">
             <div class="col-md-12">
               <p data-aos="fade-up">
-                Mi chiamo Iyan Theekshana, ho 24 anni e
-                <b>sono un giovane Junior Full Stack Web Developer. </b
-                >Appassionato dal mondo IT e dalla programmazione, da poco sono
-                uscito dal corso di
-                <b>Specializzazione IFTS di sviluppo software (Post-Diploma)</b>
-                con una valutazione ottima.
+               Mi chiamo Iyan Theekshana, ho 24 anni e sono un giovane <b>Junior Full Stack Web Developer.</b> 
+                Sono appassionato del mondo dell'IT e della programmazione. Di recente, 
+                ho completato con ottimi risultati il corso di <b>Specializzazione IFTS in sviluppo software (Post-Diploma).</b>
               </p>
-              <!-- <p data-aos="fade-up">
-                Sono molto concentrato sullo sviluppo delle applicazioni e sulla
-                scrittura di codice,<b>
-                  attualmente utilizzo HTML5, CSS3/SCSS, JavaScript e C# per
-                  creare applicazioni .Net e front-end framework: Angular,
-                  Bootstrap.</b
-                >
-                Sono alla ricerca di nuove sfide che mi consenta di crescere
-                personalmente e professionalmente.
-              </p> -->
               <p data-aos="fade-up">
-                Sono un junior developer con competenze in
-                <b>HTML5, CSS3 e JavaScript</b>, oltre ad avere esperienza con i
-                framework front-end come <b>Angular</b>. Al momento, sto
-                imparando <b>Vue</b> per ampliare le mie conoscenze.
-                <b
-                  >Il mio obiettivo è diventare uno sviluppatore full stack web
-                  specializzato nell'ambito .NET</b
-                >. Sono sempre motivato a imparare nuove tecnologie e migliorare
-                le mie capacità per fornire prodotti di alta qualità ai miei
-                clienti.
+                Possiedo competenze approfondite in <b>HTML5, CSS3, JavaScript e C#.</b> Ho acquisito esperienza nell'utilizzo di framework front-end come <b>Angular</b>, 
+                nonché competenze nel utilizzo di <b>Entity Framework e SQL Server.</b> Il mio obiettivo è 
+                diventare uno sviluppatore full stack web specializzato <b>nell'ambito .NET.</b> Sono sempre motivato a imparare nuove tecnologie 
+                e migliorare le mie capacità al fine di offrire prodotti di alta qualità ai miei clienti.
               </p>
             </div>
           </div>
